--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,2 +1,35 @@
 /**/
-
+.titulo{
+  background-color: #1180ae;
+  color: white;
+  font-family: cursive;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+.caixa{
+  margin-top: 110px;
+  
+}
+.caixa1{
+  height: 300px;
+  background-color: #F0F8FF;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+#mapa{
+  margin-top: 120px;
+    background-color: #1180ae;
+    color: white;
+    position: absolute;
+    left: 138px;
+    width: 100px;
+    
+}
+body{
+  background-image: url("../imagens/fundo.gif");
+  background-repeat:no-repeat;
+  background-size: 900px;;
+}
