--- a/www/css/style.css
+++ b/www/css/style.css
@@ -10,23 +10,24 @@
   border-top-right-radius: 15px;
 }
 .caixa{
-  margin-top: 110px;
+  margin-top: 250px;
   
 }
 .caixa1{
-  height: 300px;
-  background-color: #F0F8FF;
+  height: 100px;
+  background-color: rgb(218, 235, 250);
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
 }
 #mapa{
-  margin-top: 120px;
+  margin-top: 30px;
     background-color: #1180ae;
     color: white;
-    position: absolute;
-    left: 138px;
-    width: 100px;
-    
+    font-size: 20px;
+    font-weight: bold;
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px;    
 }
 body{
   background-image: url("../imagens/fundo.gif");
